# redis-rgbd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Pipfile  README.md  setup.py
apps/: CMakeLists.txt
apps/rgbd_calibrate/: CMakeLists.txt  main.cc
apps/rgbd_listen/: CMakeLists.txt  main.cc
apps/rgbd_stream/: CMakeLists.txt  main.cc
cmake/: redis_rgbdConfig.cmake.in
include/redis_rgbd/: camera.h  kinect2.h  realsense.h
redisrgbd/: __init__.py
src/: CMakeLists.txt  kinect2.cc  realsense.cc
src/python/: CMakeLists.txt  redisrgbd.cc
